fix font-weight on IE

--- a/cms/static/cms/sass/components/_toolbar.scss
+++ b/cms/static/cms/sass/components/_toolbar.scss
@@ -95,7 +95,7 @@
         display: none;
     }
     > li:first-child > a span {
-        font-weight: 800;
+        font-weight: 600;
     }
     .cms-icon {
         display: none;
